atualização do ex022

--- a/exercicios/ex022/index006.html
+++ b/exercicios/ex022/index006.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            */
+            /*
+            shorthland - background
+            color - image - posicion - repeat - [size] - attachment
+            */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
 
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -30,6 +38,21 @@
         <h1>
             Teste de imagem de Fundo
         </h1>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error similique aliquam sed deserunt nihil consectetur quidem ad obcaecati, fuga quos, distinctio repellendus esse molestiae eligendi expedita. Odio vero incidunt quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo temporibus culpa quidem? Tempore pariatur ut odio ducimus voluptates tempora dolores, quia, earum, in exercitationem rerum. Impedit repellendus quisquam aperiam ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae earum neque necessitatibus libero? Natus ullam fugiat voluptas modi assumenda nulla voluptatibus similique! Est ipsam ea impedit nisi, possimus sequi accusamus.
+        </p>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error similique aliquam sed deserunt nihil consectetur quidem ad obcaecati, fuga quos, distinctio repellendus esse molestiae eligendi expedita. Odio vero incidunt quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo temporibus culpa quidem? Tempore pariatur ut odio ducimus voluptates tempora dolores, quia, earum, in exercitationem rerum. Impedit repellendus quisquam aperiam ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae earum neque necessitatibus libero? Natus ullam fugiat voluptas modi assumenda nulla voluptatibus similique! Est ipsam ea impedit nisi, possimus sequi accusamus.
+        </p>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error similique aliquam sed deserunt nihil consectetur quidem ad obcaecati, fuga quos, distinctio repellendus esse molestiae eligendi expedita. Odio vero incidunt quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo temporibus culpa quidem? Tempore pariatur ut odio ducimus voluptates tempora dolores, quia, earum, in exercitationem rerum. Impedit repellendus quisquam aperiam ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae earum neque necessitatibus libero? Natus ullam fugiat voluptas modi assumenda nulla voluptatibus similique! Est ipsam ea impedit nisi, possimus sequi accusamus.
+        </p>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error similique aliquam sed deserunt nihil consectetur quidem ad obcaecati, fuga quos, distinctio repellendus esse molestiae eligendi expedita. Odio vero incidunt quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo temporibus culpa quidem? Tempore pariatur ut odio ducimus voluptates tempora dolores, quia, earum, in exercitationem rerum. Impedit repellendus quisquam aperiam ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae earum neque necessitatibus libero? Natus ullam fugiat voluptas modi assumenda nulla voluptatibus similique! Est ipsam ea impedit nisi, possimus sequi accusamus.
+        </p>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error similique aliquam sed deserunt nihil consectetur quidem ad obcaecati, fuga quos, distinctio repellendus esse molestiae eligendi expedita. Odio vero incidunt quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo temporibus culpa quidem? Tempore pariatur ut odio ducimus voluptates tempora dolores, quia, earum, in exercitationem rerum. Impedit repellendus quisquam aperiam ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae earum neque necessitatibus libero? Natus ullam fugiat voluptas modi assumenda nulla voluptatibus similique! Est ipsam ea impedit nisi, possimus sequi accusamus.
+        </p>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error similique aliquam sed deserunt nihil consectetur quidem ad obcaecati, fuga quos, distinctio repellendus esse molestiae eligendi expedita. Odio vero incidunt quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo temporibus culpa quidem? Tempore pariatur ut odio ducimus voluptates tempora dolores, quia, earum, in exercitationem rerum. Impedit repellendus quisquam aperiam ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae earum neque necessitatibus libero? Natus ullam fugiat voluptas modi assumenda nulla voluptatibus similique! Est ipsam ea impedit nisi, possimus sequi accusamus.
         </p>
