--- a/exercicios/ex025/index007.html
+++ b/exercicios/ex025/index007.html
@@ -13,10 +13,11 @@
             <label for="iest">Estado</label>
             <select name="estado" id="iest">
 
+                <option value="" selected>---Escolha---</option>
             <optgroup label="Região Sudoeste">
                 <option value="MG">Minas Gerais</option>
                  <option value="RJ">Rio de Janeiro</option>
-                 <option value="SP" selected>São Paulo</option>
+                 <option value="SP">São Paulo</option>
                 </optgroup>
 
             <optgroup label="Região Nordeste">
@@ -25,6 +26,20 @@
                 <option value="RN">Rio Grande do Norte</option>
             </optgroup>
             </select>
+        </p>
+        <p>
+            <label for="iprof">Profissão</label>
+            <input type="text" name="prof" id="iprof" list="lstprof">
+            <datalist id="lstprof">
+                <option>Administrador</option>
+                <option >Contabilista</option>
+                <option>Desenvolvedor</option>
+                <option >Profesor</option>
+            </datalist>
+        </p>
+        <p>
+            <label for="imsg">Mensagem</label> <br>
+            <textarea name="msg" id="imsg" cols="30" rows="10"></textarea>
         </p>
         <p>
             <input type="submit" value="Enviar">
